# SeQuant

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .pull.sh  .push.sh  .travis.yml  .zenodo.json  CHANGES.md  CITATION.cff  CMakeLists.txt  INSTALL.md  LICENSE  README.md  SeQuant.m  api.html  config.sh  genindex.html  index.html  objects.inv  search.html  searchindex.js
benchmarks/: CMakeLists.txt  canonicalize.cpp  coupled_cluster.cpp  main.cpp  simplify.cpp  spintrace.cpp  tensor_block_compare.cpp  tensor_network.cpp  wick.cpp  wick_benchmark.cpp
doc/: .gitignore  CMakeLists.txt  Doxyfile.in  README.rst  api.rst.in  conf.py  doxy-boot.js  index.rst
doc/.doxygen/: Doxyfile.in  README.md  jquery.smartmenus.js  layout.xml
doc/.sphinx/: conf.py.in  requirements.txt
doc/dev/plans/: 2026-06-18-cost-model-batch-aware-phase2-plan.md  2026-06-18-cost-model-batch-aware-plan.md  2026-06-19-cost-model-oldimpl-removal-plan.md  2026-06-19-cost-model-phase4-plan.md
doc/dev/specs/: 2026-06-18-cost-model-batch-aware-design.md  2026-06-23-roofline-tiebreak-cost.md  2026-07-01-symmetry-deduction-via-tn-canonicalization.md
doc/developer/: docs_advanced.rst  documentation.rst  index.rst  tnc.rst
doc/doxygen/: CMakeLists.txt  Doxyfile.in
doc/examples/: CMakeLists.txt
doc/examples/synopsis/: synopsis2.cpp  synopsis3.cpp  synopsis4.cpp  synopsis5.cpp  synopsis6.cpp
doc/examples/user/: cc.cpp  operator.cpp
doc/examples/user/getting_started/: ccd.cpp  ccd_pedestrian.cpp  index_space_registry.cpp  index_space_registry_1.cpp  index_space_registry_2.cpp  index_spaces.cpp  wick.cpp
doc/sphinx/: CMakeLists.txt  conf.py  conf.py.in  index.rst  requirements.txt
doc/sphinx/internal/: docs_advanced.rst
doc/sphinx/source/: cc.rst  eval.rst  install.rst
doc/sphinx/user/: docs.rst  installing.rst  using.rst  using_sequant.md
doc/user/getting_started/: docs.rst  index.rst  index_spaces.rst  installing.rst  operators.rst  using.rst  wick.rst
doc/user/guide/: cc.rst  evaluation.rst  index.rst  io.rst  mpqc_out.txt  operator.rst  parse.rst  trace.txt
doc/user/utilities/: external_interface.rst  index.rst
examples/analysis/: CMakeLists.txt  README.md  algorithm.cpp  algorithm.hpp  cmdline.cpp  cmdline.hpp  imed.cpp  imed.hpp  main.cpp  utils.cpp  utils.hpp
external-interface/: CMakeLists.txt  external_interface.cpp  format_support.hpp  processing.cpp  processing.hpp  utils.cpp  utils.hpp
python/: CMakeLists.txt  test_sequant.py
python/src/sequant/: _sequant.cc  mbpt.h  python.h
scratch/: CMakeLists.txt
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  antisymmetrizer.cpp  eomcc.cpp  os_eom.cpp  osstcc.cpp  srcc.cpp  srcc_compact_set.cpp  stcc.cpp  stcc_compact_set.cpp  stcc_optimal.cpp  stcc_rigorous.cpp  stcc_v0.cpp  stcc_v1.cpp
tests/integration/eval/: CMakeLists.txt  calc.inp  calc_info.cpp  calc_info.hpp  data_info.cpp  eval_utils.hpp  options.cpp  options.hpp  scf.cpp  scf.hpp
tests/integration/eval/btas/: data_world_btas.hpp  main.cpp  scf_btas.hpp
tests/integration/eval/ta/: data_world_ta.hpp  main.cpp  scf_ta.hpp
tests/integration/eval/tapp/: data_world_tapp.hpp  main.cpp  scf_tapp.hpp
tests/unit/: CMakeLists.txt  catch.hpp  catch2_sequant.hpp  gwt.hpp  test_abstract_tensor.cpp  test_asy_cost.cpp  test_binarize_expr.cpp  test_binary_expr.cpp  test_binary_node.cpp  test_biorthogonalization.cpp  test_bliss.cpp  test_cache_manager.cpp  test_canonicalize.cpp  test_clone.cpp  test_clone_packed.cpp  test_codegen_ta.cpp  test_config.hpp  test_eval_btas.cpp  test_eval_expr.cpp  test_eval_node.cpp  test_eval_seq.cpp  test_eval_sequence.cpp  test_eval_ta.cpp  test_eval_tapp.cpp  test_eval_tensor.cpp  test_eval_tiledarray.cpp  test_eval_tree.cpp  test_export.cpp  test_export.hpp  test_export_python.cpp  test_expr.cpp  test_expr_parse.cpp  test_extract_subtrees.cpp  test_factorize.cpp  test_factorizer.cpp  test_flops_counter.cpp  test_fusion.cpp  test_imed_tensor.cpp  test_index.cpp  test_inferred_imed_data.cpp  (+35 more)
tests/unit/data/: sf_r2_direct_real.txt  sf_r2_direct_real_inc.hpp
tests/unit/export_tests/: batched_binary_contract.export_test  batched_binary_contract_with_double_load.export_test  batched_sum_inary_contract.export_test  batched_sum_with_intermediate_rename.export_test  binary_contract.export_test  binary_contract_times_variable.export_test  binary_dot.export_test  binary_plus_ternary.export_test  duplicate_tensor_blocks_nonoverlapping.export_test  duplicate_tensor_blocks_overlapping.export_test  intermediate_renaming_I.export_test  intermediate_renaming_II.export_test  named_expr.export_test  named_expression_group.export_test  named_expression_group_with_reused_result.export_test  named_sum_with_scalar_factor.export_test  noncovariant_thc.export_test  power_complex_times_tensor_product.export_test  power_fractional_base_scalar.export_test  power_negative_exponent_scalar.export_test  power_scalar_times_tensor.export_test  product_of_scalars.export_test  product_with_variable.export_test  repeated_leaf_tensor.export_test  scalar_times_tensor.export_test  scaled_product.export_test  sum_binary_plus_binary.export_test  sum_binary_with_ternary.export_test  sum_binary_with_unary.export_test  sum_containing_intermed_with_same_shape_as_result.export_test  sum_dot_with_dot.export_test  sum_of_index_permutations.export_test  sum_scaled_unary_with_scaled_unary.export_test  sum_unary_plus_binary.export_test  sum_unary_plus_unary.export_test  sum_unary_with_unary_with_unary.export_test  sum_with_shared_factor.export_test  sum_without_reordering_indices.export_test  ternary.export_test  tree_rebalancing.export_test  (+1 more)
utilities/: CMakeLists.txt  README.md  tensor_network_graphs.cpp
utilities/external-interface/: CMakeLists.txt  README.md  external_interface.cpp  format_support.hpp  processing.cpp  processing.hpp  utils.cpp  utils.hpp
utilities/external-interface/examples/: .gitignore  README.md  ccsd.itfaa.expected  ccsd.json  nevpt2.itfaa.expected  nevpt2.json
utilities/external-interface/examples/ccsd/: ccsd_en.inp  ccsd_res1.inp  ccsd_res1_s1.inp  (+2 more)
(+9696 files in other folders)
